fix lessons being cut off

--- a/src/components/training/Training.less
+++ b/src/components/training/Training.less
@@ -14,6 +14,9 @@
 .manage-training .main-content{
   height: calc(100vh - 204px);
 }
+.courses.main-content{
+  height: calc(100vh - 210px);
+}
 .course-description p{
   padding-left: 20px;
   line-height: 1.5;
